# adxl355-rs

./: Cargo.toml  README.md  bmp.gdb  bmp.sh  build.rs  flash.sh  stm32g070.x
.cargo/: config
examples/: blackpill.rs  norm_stm32g070.rs  stm32g070.rs
src/: conf.rs  lib.rs  register.rs
