[package]
name = "adxl355"
edition = "2018"
authors = ["Jitter"]
description = "A platform agnostic driver to interface with the ADXL355 through SPI (accelerometer)"
documentation = "https://docs.rs/adxl355"
keywords = ["embedded-hal-driver", "accelerometer", "MEMS"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JitterCompany/adxl355-rs"
version = "0.2.1"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
accelerometer = "0.11.0"


[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nb = "0.1.2"

[dev-dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.5.3"

# Disabled until 0.07 release
# [dev-dependencies.stm32g0xx-hal]
# features = ["stm32g07x", "rt"]
# version = "0.0.7"
## git = "https://github.com/stm32-rs/stm32g0xx-hal.git"
## rev = "3d190f799af1"

# [[example]]
# name = "stm32g070"
# required-features = ["stm32g070"]

[[example]]
name = "blackpill"
required-features = ["stm32f103"]

[features]
stm32g070 = []
stm32f103 = []

[profile.dev]
opt-level = 1
debug = true